--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<h1>Mon 1er site web</h1>
+<html>
+<head> 
+	<meta>
+	<title></title>
+<link href="https://fonts.googleapis.com/css?family=Lobster&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Lobster|Ubuntu+Condensed&display=swap" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="style.css">
+
+</head>
+<body> 
+
+	<img src="images/Australie2.jpeg" class="aus2"
+	<img src="images/Australie.jpg" class= "aus2">
+<div class="box-green">
+
+	<h1>My trip 2018-2019</h1> </div>
+	<h2>Welcome to Australia</h2> 
+	<p></p>
+	<iframe width="684" height="385" src="https://www.youtube.com/embed/BxAVyKZDBBQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+	<a href="https://www.facebook.com/marion.sourbe"target="_blank">Click here</a> 
+
+<img src="images/Australie.jpg"
+
+
+<div class= "box-global">
+	<div class="box-blue">Blue</div>
+	<div class="box-white">White</div>
+	<div class="box-red">Red</div>
+</div>
+
+
+</body>
+</html>
